# realworld

./: .gitignore  changelog.md  readme.md  realworld.cabal
src/Control/Monad/: RealWorld.hs
src/Control/Monad/State/: RealWorld.hs
src/Control/Monad/State/RealWorld/: GHC.hs  Instances.hs
src/Control/Monad/State/RealWorld/GHC/: BigNum.hs
src/Control/Monad/State/RealWorld/Instances/: TH.hs
src/RealWorld/: GHC.hs  Instances.hs  Monad.hs  Prim.hs
src/RealWorld/GHC/: BigNum.hs
src/RealWorld/Instances/: TH.hs
src/RealWorld/Monad/: State.hs
src/RealWorld/Prim/: Class.hs
test/: Inspection.hs
