cabal-version:  3.0
name:           realworld
version:        90.0.1
author:         Sam Derbyshire
maintainer:     Sam Derbyshire
license:        BSD-3-Clause
homepage:       https://github.com/sheaf/realworld
build-type:     Simple
description:

  A RealWorld-token state-passing levity polymorphic monad
  with support for GHC primops.

  Consider the GHC @catch#@ primop, which has type:

  @
    catch#
      :: ( State# RealWorld -> (# State# RealWorld, a #) )
      -> ( b -> State# RealWorld -> (# State# RealWorld, a #) )
      -> State# RealWorld
      -> (# State# RealWorld, a #)
  @

  This library re-exports it's own version using the @StateS#@ state monad.
  The type signature of @catch#@ then becomes:

  @
    catch#
      :: StateS# RealWorld a
      -> ( b -> StateS# RealWorld a )
      -> StateS# RealWorld a
  @

  which should be familiar to users of @Control.Monad.Except@:

  @
    catchError
      :: m a
      -> ( b -> m a )
      -> m a
  @

  This library allows for writing programs in a more idiomatic (monadic) style,
  using either @QualifiedDo@ or @RebindableSyntax@.

  This comes at no extra runtime cost: GHC is able to optimise this
  abstraction away (in our limited testing, at least).

  Provides drop-in replacement modules for @GHC.Exts@ as well as the @ghc-bignum@ library.

  __Disclaimer__: to work around the GHC levity polymorphism restrictions,
  we use ad-hoc typeclasses to support the various monadic operations at
  different runtime representations.
  If you run into a runtime rep which is missing an instance,
  you will have to define your own orphans;
  a helper Template Haskell splice is provided for that purpose.

common common

  default-language:
    Haskell2010
  
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    MagicHash
    NoStarIsType
    PatternSynonyms
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneKindSignatures
    TypeApplications
    TypeFamilyDependencies
    TypeOperators
    UnboxedTuples

  ghc-options:
    -Wall -Wcompat -Wno-unticked-promoted-constructors

common libs

  build-depends:
    base
      >= 4.15 && < 4.16,
    ghc-bignum
      >= 1.0  && < 1.1 ,
    template-haskell
      >= 2.17 && < 2.18,

library

  import:
    common, libs

  hs-source-dirs:
    src

  exposed-modules:
    Control.Monad.RealWorld
    Control.Monad.State.RealWorld
    Control.Monad.State.RealWorld.GHC
    Control.Monad.State.RealWorld.GHC.BigNum

    Control.Monad.State.RealWorld.Instances.TH

  other-modules:
    Control.Monad.State.RealWorld.Instances

library realworld-inspection
--test-suite realworld-inspection

  import:
    common, libs

--  type:
--    detailed-0.9

  build-depends:
    realworld,
--  inspection-testing
--    >= 0.4 && < 0.5, -- doesn't support GHC 9.0 yet

--  test-module:
--    Inspection

  hs-source-dirs:
    test

  exposed-modules:
    Inspection


executable gen-primops

  import:
    common

  build-depends:
    base
      >= 4.14    && < 5.0,
    megaparsec
      >= 9.0.1   && < 9.1,
    parser-combinators
      >= 1.3.0   && < 2.0,
    text
      >= 1.2.4.1 && < 1.3,

  hs-source-dirs: gen

  main-is: Main.hs

  other-modules:
    GenPrimOps
    ParsePrimOps
